Fixed buttons and img alignment on thanks page

--- a/public/stylesheets/thanks.css
+++ b/public/stylesheets/thanks.css
@@ -2,8 +2,8 @@
     text-align: center;
 }
 
-.example_img {
-    width: 80%;
+.thanks_img {
+    width: 40%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -13,6 +13,7 @@
     margin-top: 20px;
 }
 
-h1 {
+h2 {
     color: rgb(30, 139, 139) !important;
+    padding-bottom: 2%;
 }
